[gd_scene load_steps=2 format=3 uid="uid://drahuq6jadps6"]

[ext_resource type="Script" uid="uid://ciupsn28cgd6r" path="res://Scenes/level_select.gd" id="1_1fiak"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1fiak")

[node name="mapBtns" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 173.0
offset_top = 212.0
offset_right = 266.0
offset_bottom = 278.0
scale = Vector2(3.30942, 3.30942)

[node name="map1Btn" type="Button" parent="mapBtns"]
layout_mode = 2
text = "CHAPTER 1"

[node name="map2Btn" type="Button" parent="mapBtns"]
layout_mode = 2
text = "CHAPTER 2"

[node name="backBtn" type="Button" parent="."]
layout_mode = 2
offset_left = 52.0
offset_top = 36.0
offset_right = 145.0
offset_bottom = 67.0
text = "BACK
"

[connection signal="pressed" from="mapBtns/map1Btn" to="." method="_on_map_1_btn_pressed"]
[connection signal="pressed" from="mapBtns/map2Btn" to="." method="_on_map_2_btn_pressed"]
[connection signal="pressed" from="backBtn" to="." method="_on_back_btn_pressed"]
